# t1_robot

./: .gitignore  LICENSE  README.md  SUBMISSION_SUMMARY.md  analysis_tools.py  demo_script.py  ppo_algorithm.py  project_readme.md  pyproject.toml  quick_demo.bat  t1_robot_env.py  test_results.md  test_script.py  train_script.py  项目提交说明.md
checkpoints/: final_model.pt
logs/: final_training_log.json
models/: t1_robot.xml
